k8s-manisfest/2048-app/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2048
  labels:
    app: app-2048
    tier: frontend
spec:
  selector:
    matchLabels:
      app: app-2048
  replicas: 2
  template:
    metadata:
      labels:
        app: app-2048
        tier: frontend
    spec:
      containers:
      - image: alexwhen/docker-2048
        imagePullPolicy: Always
        name: app-2048
        ports:
        - containerPort: 80
