k8s-manisfest/2048-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-2048
  namespace: app-2048
  labels:                
    app: app-2048
    tier: frontend
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: app-2048
    tier: frontend
