k8s-manisfest/2048-app/manifests/web-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-2048
  namespace: app-2048
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: game.13.36.32.81.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-2048
            port:
              number: 80
